--- a/doc/graphic_display.tex
+++ b/doc/graphic_display.tex
@@ -17,8 +17,8 @@ During the simulation
 the results are stored in the directory {\prg ./results}, the output files can be viewed 
 using the programs described in this section. 
 
-\subsection{Programs {\prg display},{\prg displaybubbles\index{displaybubbles} },{\prg %%@
-displaycontour\index{displaycontour}},{\prg displaytext\index{displaytext}} and {\prg show} - graphical %%@
+\subsection{Programs {\prg display}, {\prg displaybubbles\index{displaybubbles}}, {\prg %%@
+displaycontour\index{displaycontour}}, {\prg displaytext\index{displaytext}} and {\prg show} - graphical %%@
 display\index{display} of any xy data such as magnetisation etc.}
 \label{display}
 
@@ -45,7 +45,7 @@ such as
 xcol,ycol ... column to be taken as x-, y- axis  in a lineplot
 when using option -o file.jpg the application creates a jpg file on exiting
 when using option -xmin 23.3 the application sets the minimum of the display xaxis to 23.3
-similar are options -xmax -ymin -ymax ....
+similar are options -xmax -ymin -ymax -title ....
 when using option -c file.jpg the application only creates a jpg file and exits immediatly
 if optional errorcolumns are added then instead of lines symbols and errorbars are shown
 if optional bubblecolumns are added then instead of lines bubbles with area corresponding to
