--- a/doc/mcphas.tex
+++ b/doc/mcphas.tex
@@ -2,7 +2,7 @@
 Diffraction, etc.)}
 \label{runmcphas}
 
-In order to perform calculations beyond the capabilities of {\prg so1ion\index{so1ion}} it is necessary
+In order to perform calculations beyond the capabilities of {\prg singleion\index{so1ion}} it is necessary
 to use the program {\prg mcphas}. 
 \begin{itemize}
 \item As a first step it is possible to
