--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -332,7 +332,7 @@ CeAl2\_cfphonon\_cfstr &  CeAl$_2$ - Crystal Field phonon int., & {\prg phonon},
                        &   CEF magnetostriction &   {\prg so1ion } &  \\
 CeCu$_2$       & mag phase diagram, fit of dispersive  & {\prg kramer}\index{kramer} & \cite{loewenhaupt06-775,schedler03-1313} \\
                & mag. excitations to neutron data      &               & \\
-CeCu$_2$Ge$_2$ & crystal field - phonon interaction & {\prg phonon, bcfph }  & \\
+CeCu$_2$Ge$_2$ & crystal field - phonon int., Becker \& DMD method & {\prg phonon, bcfph }  & \\
 CePd$_2$Si$_2$ & neutron diffraction going beyond  & {\prg %%@
 so1ion}&\cite{rotter09-140405} \\
                & dipolar approx for mag. formfactor & &\\     
