makenn bvk option modified to clear sipf files initially

--- a/doc/additional_programs.tex
+++ b/doc/additional_programs.tex
@@ -252,6 +252,8 @@ $\rho^2=R_a^2/D_a^2+R_b^2/D_b^2+R_c^2/D_c^2$
              \begin{verbatim}  #  atom_i_sipf atom_j_sipf bondlength(A) long(N/m) trans(N/m) 
 Ce1.sipf  Ce1.sipf  +4.0 200.9 100.0
 Ce1.sipf  Ce1.sipf  +4.7 70.9 0.0
+              mind: into MODPAR2-6 in *.sipf the Einstein-oscillator parameters
+              are written, too
              \end{verbatim}
               Longitudinal/Transversal springs are described by $c_L$/$c_T$, respectively and
               the energy is given by
