going for mcphase 5.5 with changes do Dx4 Dy4Dz4 anisotropy in so1ion

--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -78,6 +78,11 @@ Without the enthusiastic support of the neutron scattering
 community this program would not have come into existence. 
 
 \section*{What is New ?}
+\subsection*{ \dots in version 5.5 \dots}
+\begin{itemize}
+\item anisotropy $H=D_{x4} S_x^4 +D_{y4} S_y^4 +D_{z4} S_x^4$ introduced in module {\prg so1ion}
+\end{itemize}
+
 \subsection*{ \dots in version 5.4 \dots}
 \begin{itemize}
 \item    {\prg bcfph} and a DMD method for Crystal Field - Phonon interaction, see example CeCu2Ge2 
