--- a/doc/additional_programs.tex
+++ b/doc/additional_programs.tex
@@ -28,8 +28,8 @@ by doing a mcphas or
                     calculate the anisotropy in the xy plane, then
                     enter xn yn zn = 0 0 1
       nofsteps    : number of steps to be calculated 
-     -p           : calculate polycystal average
-      nofthetastepssteps    : number of theta steps to be calculated for polycrystasl average
+     -p           : calculate polycrystal average
+      nofthetastepssteps    : number of theta steps to be calculated for polycrystal average
 
     option:
     -r sipffilename: filename of single ion parameter file
