Dx4 Dy4Dz4 anisotropy in so1ion finalised

--- a/doc/extsimod.tex
+++ b/doc/extsimod.tex
@@ -19,7 +19,7 @@ module       &$\hat I_a,\hat I_b,\hat I_c ...$\\
 \hline
 INTERNAL MODULES  & \\
 \hline
-{\prg so1ion}                & $\hat J_a,\hat J_b,\hat J_c,\hat O_{2-2},\hat O_{2-1},\hat O_{20},\hat O_{21},\hat O_{22},\hat O_{3-3}...\hat O_{66}$ \\
+{\prg so1ion}                & $\hat J_a,\hat J_b,\hat J_c,\hat O_{2-2},\hat O_{2-1},\hat O_{20},\hat O_{21},\hat O_{22},\hat O_{3-3}...\hat O_{66},\hat J_a^2,\hat J_b^2,\hat J_c^2,\hat J_a^4,\hat J_b^4,\hat J_c^4$ \\
 {\prg cfield}                & $\hat J_a,\hat J_b,\hat J_c,\hat O_{2-2},\hat O_{2-1},\hat O_{20},\hat O_{21},\hat O_{22},\hat O_{3-3}...\hat O_{66}$ \\
 \hline
 {\prg kramer} & $\hat J_a,\hat J_b,\hat J_c$ \\
