--- a/doc/q_int.tex
+++ b/doc/q_int.tex
@@ -101,7 +101,8 @@ denoted by numbers, sometimes by characters: $\hat I_1,\hat I_2,\hat I_3, \hat I
 
 By default in module {\prg so1ion} the operator sequence is $\hat I_1,\hat I_2,\hat I_3, \hat I_4, \dots =$
 $\hat O_{11}$,$\hat O_{11}^s$, $\hat O_{10}$, $\hat O_{22}^s$, $\hat O_{21}^s$,$\hat O_{20}$,
-$\hat O_{21}$,$\hat O_{22}$,$\hat O_{33}^s$, ...
+$\hat O_{21}$,$\hat O_{22}$,$\hat O_{33}^s$, ...,$\hat O_{66}$,$\hat J_x^2$,$\hat J_y^2$,$\hat J_z^2$,
+$\hat J_x^4$,$\hat J_y^4$,$\hat J_z^4$.
 according to equation (\ref{multipolehamiltonrepeated}) and table~\ref{olms}.
  The exchange constants for the
 products of these Stevens operators have to be 
